# ai-usage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config_manager.py  main.py  nixpacks.toml  pyproject.toml  railpack.json  railway.toml
.github/: FUNDING.yml
backend/: auth.py  config_manager.py  crypto.py  main.py  pyproject.toml  railpack.json  railway.toml  scheduler.py
backend/models/: database.py  schemas.py
backend/providers/: __init__.py  anthropic.py  aws.py  base.py  civitai.py  firecrawl.py  gcp.py  gemini.py  manus.py  mem0.py  mistral.py  neon.py  openai.py  plaud.py  railway.py  runpod.py  vercel.py  xai.py
backend/routers/: auth.py  credits.py  settings.py
frontend/: index.html  package.json  pnpm-lock.yaml  railpack.json  railway.toml  server.js  vite.config.ts
frontend/server/: index.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Footer.tsx  ProviderCard.tsx  SettingsModal.tsx  SummaryBar.tsx
frontend/src/hooks/: useAuth.ts  useDashboard.ts  useSettings.ts
frontend/src/pages/: LoginPage.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  format.ts
models/: schemas.py
providers/: __init__.py  groq.py  openrouter.py  warp.py
routers/: credits.py  health.py  settings.py
