[project]
name = "ai-credits-tracker"
version = "1.0.0"
description = "AI Credits Usage Tracker — Dashboard for monitoring cloud AI service balances"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
